--- a/SharpMath.Tests/SharpMath.Tests.csproj
+++ b/SharpMath.Tests/SharpMath.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MatrixTest.cs" />
     <Compile Include="ParserTest.cs" />
     <Compile Include="LinearEquationTest.cs" />
+    <Compile Include="PolygonTest.cs" />
     <Compile Include="VectorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
