--- a/SharpMath/SharpMath.csproj
+++ b/SharpMath/SharpMath.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Geometry\Point.cs" />
     <Compile Include="Geometry\Point2D.cs" />
     <Compile Include="Geometry\Point3D.cs" />
+    <Compile Include="Geometry\PointEnumerator.cs" />
     <Compile Include="Geometry\Polygon.cs" />
     <Compile Include="Geometry\ProjectionData.cs" />
     <Compile Include="Geometry\SquareMatrix.cs" />
