--- a/SharpMath/SharpMath.csproj
+++ b/SharpMath/SharpMath.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Algorithm.cs" />
     <Compile Include="FloatingNumber.cs" />
+    <Compile Include="FloatingNumberExtensions.cs" />
     <Compile Include="Geometry\Exceptions\DimensionException.cs" />
     <Compile Include="Geometry\Line2D.cs" />
     <Compile Include="Geometry\Line3D.cs" />
